[package]
name = "dig-mempool"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
description = "DIG L2 mempool — fee-prioritized, conflict-aware transaction pool with CPFP support"
license = "MIT"
authors = ["DIG Network"]
repository = "https://github.com/DIG-Network/dig-mempool"

[lib]
path = "src/lib.rs"

[dependencies]
# DIG ecosystem
dig-clvm = "0.1.0"
dig-constants = "0.1.0"

# Error handling
thiserror = "2"

# Serialization (for snapshot/restore)
serde = { version = "1", features = ["derive"] }

# chia-protocol serde support for SpendBundle, Bytes32, Coin serialization (LCY-007, FEE-005)
chia-protocol = { version = "0.26", features = ["serde"] }

# chia-sdk-driver for SingletonLayer::parse_puzzle (POL-009 singleton detection)
chia-sdk-driver = "0.30"

# SHA-256 for identical-spend dedup index keys (POL-008)
sha2 = "0.10.9"

[dev-dependencies]
chia-sdk-test = "0.30"
hex-literal = "0.4"
rand = "0.8"
sha2 = "0.10.9"
serde_json = "1"
